--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Bitstream Vera Sans Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Bitstream Vera Sans Mono'), url('/fonts/VeraMono.woff') format('woff');
+}
+@font-face {
+  font-family: 'Bitstream Vera Sans Mono';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Bitstream Vera Sans Mono'), url('/fonts/VeraMono-Italic.woff') format('woff');
+}
+@font-face {
+  font-family: 'Bitstream Vera Sans Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Bitstream Vera Sans Mono'), url('/fonts/VeraMono-Bold.woff') format('woff');
+}
+@font-face {
+  font-family: 'Bitstream Vera Sans Mono';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Bitstream Vera Sans Mono'), url('/fonts/VeraMono-Bold-Italic.woff') format('woff');
+}
+
 html,
 body {
   padding: 0;
